Fixed highlight wraps

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -38,7 +38,7 @@ code {
     background-color: rgba(27, 31, 35, .05);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen {
     pre code {
         white-space: pre;
     }
